A logging-test command (moved here from Makeshift).

--- a/README.html
+++ b/README.html
@@ -5,7 +5,7 @@
 <h1 lang='en-CA'>Java programming</h1>
 <section lang='en-CA'> <!-- Introduction -->
     <p>
-        This project houses general-purpose library code.
+        This project houses general-purpose library code and minor programming tools.
         </p>
     </section>
 <section lang='en-CA'> <!-- Copying -->
