--- a/README.html
+++ b/README.html
@@ -10,7 +10,7 @@
     </section>
 <section lang='en-CA'> <!-- Copying -->
     <p>
-        Copyright © 2020  Michael Allan.
+        Copyright © 2020-2021  Michael Allan.
         The files for this project are released under an <a href='LICENCE.txt'>MIT licence</a>.
         </p>
     </section>
