--- a/README.html
+++ b/README.html
@@ -1,16 +1,13 @@
 <!-- - -
- ! Omit the “beginnings of an HTML document (<html>, <head>, etc.)”, this file is targetable
+ ! Omit the formal “beginnings of an HTML document (<html>, <head>, etc.)”, this file is targetable
  ! by `ReadmeName` directives.  http://httpd.apache.org/docs/2.4/mod/mod_autoindex.html
  ! Maintain a Markdown compatible form, this file is targeted by Git Hub adaptor link `README.md`. -->
 <h1 lang='en-CA'>Java programming</h1>
 <section lang='en-CA'> <!-- Introduction -->
     <p>
-        This project houses general-purpose library code and minor programming tools.
-        </p>
-    </section>
+        This project houses general-purpose library code and minor programming tools.</p></section>
 <section lang='en-CA'> <!-- Copying -->
     <p>
         Copyright © 2020-2021  Michael Allan.
-        The files for this project are released under an <a href='LICENCE.txt'>MIT licence</a>.
-        </p>
-    </section>
+        The files for this project are released under an <a href='LICENCE.txt'>
+        MIT licence</a>.</p></section>
