--- a/README.html
+++ b/README.html
@@ -5,9 +5,10 @@
 <h1 lang='en-CA'>Java programming</h1>
 <section lang='en-CA'> <!-- Introduction -->
     <p>
-        This project houses general-purpose library code and minor programming tools.</p></section>
+        This project houses a library of general-purpose Java code
+        together with minor programming tools.</p></section>
 <section lang='en-CA'> <!-- Copying -->
     <p>
-        Copyright © 2020-2022  Michael Allan.
+        Copyright © 2020-2023  Michael Allan.
         The files for this project are released under an <a href='LICENCE.txt'>
         MIT licence</a>.</p></section>
